--- a/team.html
+++ b/team.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="member-info">
                         <h2>Andrew A Wilson, MD</h2>
-                        <p class="member-title">Associate Professor of Medicine<br>Director of <a href="http://www.bu.edu/alpha-1/" target="_blank">The Alpha-1 Center</a></p>
+                        <p class="member-title">Professor of Medicine<br>Director of <a href="http://www.bu.edu/alpha-1/" target="_blank">The Alpha-1 Center</a></p>
                         <p class="member-email">awilson at bu.edu</p>
                     </div>
                 </div>
