--- a/team.html
+++ b/team.html
@@ -45,7 +45,7 @@
                 <div class="team-member featured">
                     <div class="member-photo">
                         <!-- Replace with actual photo: images/andrew-wilson.jpg -->
-                        <img src="images/placeholder-person.jpg" alt="Andrew A Wilson, MD" />
+                        <img src="images/andrew-wilson.jpg" alt="Andrew A Wilson, MD" />
                     </div>
                     <div class="member-info">
                         <h2>Andrew A Wilson, MD</h2>
@@ -59,7 +59,7 @@
                     <div class="team-member">
                         <div class="member-photo">
                             <!-- Replace with actual photo: images/joe-kaserman.jpg -->
-                            <img src="images/placeholder-person.jpg" alt="Joseph Kaserman, MD" />
+                            <img src="images/joe-kaserman.jpg" alt="Joseph Kaserman, MD" />
                         </div>
                         <div class="member-info">
                             <h3>Joseph Kaserman, MD</h3>
@@ -73,7 +73,7 @@
                     <div class="team-member">
                         <div class="member-photo">
                             <!-- Replace with actual photo: images/carly-merritt.jpg -->
-                            <img src="images/placeholder-person.jpg" alt="Carly Merritt" />
+                            <img src="images/carly-merritt" alt="Carly Merritt" />
                         </div>
                         <div class="member-info">
                             <h3>Carly Merritt, BA</h3>
@@ -87,7 +87,7 @@
                     <div class="team-member">
                         <div class="member-photo">
                             <!-- Replace with actual photo: images/meline-homps.jpg -->
-                            <img src="images/placeholder-person.jpg" alt="Méline Homps-Legrand, PhD" />
+                            <img src="images/meline-homps.jpg" alt="Méline Homps-Legrand, PhD" />
                         </div>
                         <div class="member-info">
                             <h3>Méline Homps-Legrand, PhD</h3>
