--- a/team.html
+++ b/team.html
@@ -73,7 +73,7 @@
                     <div class="team-member">
                         <div class="member-photo">
                             <!-- Replace with actual photo: images/carly-merritt.jpg -->
-                            <img src="images/carly-merritt" alt="Carly Merritt" />
+                            <img src="images/carly-merritt.jpg" alt="Carly Merritt" />
                         </div>
                         <div class="member-info">
                             <h3>Carly Merritt, BA</h3>
