--- a/team.html
+++ b/team.html
@@ -101,15 +101,15 @@
                     <!-- Staff -->
                     <div class="team-member">
                         <div class="member-photo">
-                            <!-- Replace with actual photo: images/mark-dodge.jpg -->
-                            <img src="images/placeholder-person.jpg" alt="Mark Dodge, MPH" />
+                            <!-- Replace with actual photo: images/shumin-guan.jpg -->
+                            <img src="images/placeholder-person.jpg" alt="Shumin Guan, MPH" />
                         </div>
                         <div class="member-info">
-                            <h3>Mark Dodge, MPH</h3>
+                            <h3>Shumin Guan, MPH</h3>
                             <p class="member-title">Study Coordinator</p>
-                            <p class="member-education">University of New England</p>
-                            <p class="member-research"><strong>Research Interests:</strong> Alpha-1 antitrypsin deficiency-associated liver disease; patient stem cell repositories</p>
-                            <p class="member-contact">mdodge1 at bu.edu</p>
+                            <p class="member-education">Boston University School of Public Health</p>
+                            <p class="member-research"><strong>Research Interests:</strong> Alpha-1 antitrypsin deficiency; Clinical trials</p>
+                            <p class="member-contact">sguan at bu.edu</p>
                         </div>
                     </div>
 
