--- a/team.html
+++ b/team.html
@@ -102,7 +102,7 @@
                     <div class="team-member">
                         <div class="member-photo">
                             <!-- Replace with actual photo: images/shumin-guan.jpg -->
-                            <img src="images/placeholder-person.jpg" alt="Shumin Guan, MPH" />
+                            <img src="images/shumin-guan.jpg" alt="Shumin Guan, MPH" />
                         </div>
                         <div class="member-info">
                             <h3>Shumin Guan, MPH</h3>
@@ -116,28 +116,28 @@
                     <div class="team-member">
                         <div class="member-photo">
                             <!-- Replace with actual photo: images/marissa-gallagher.jpg -->
-                            <img src="images/placeholder-person.jpg" alt="Marissa Gallagher, M. Ed." />
+                            <img src="images/shubham-kesarwani.jpg" alt="Shubham Kesarwani, PhD" />
                         </div>
                         <div class="member-info">
-                            <h3>Marissa Gallagher, M. Ed.</h3>
-                            <p class="member-title">Wilson Lab Manager</p>
-                            <p class="member-education">Boston University</p>
-                            <p class="member-research"><strong>Research Interests:</strong> Molecular effects of PM2.5 exposure on lung epithelium</p>
-                            <p class="member-contact">mgalla at bu.edu</p>
+                            <h3>Shubham Kesarwani, PhD</h3>
+                            <p class="member-title">Postdoc</p>
+                            <p class="member-education">Institute for Stem Cell Science and Regenerative Medicine, India</p>
+                            <p class="member-research"><strong>Research Interests:</strong> Genetic contributors to AATD liver disease outcomes</p>
+                            <p class="member-contact">skesar at bu.edu</p>
                         </div>
                     </div>
 
                     <div class="team-member">
                         <div class="member-photo">
                             <!-- Replace with actual photo: images/vikram-daesety.jpg -->
-                            <img src="images/placeholder-person.jpg" alt="Vikram Daesety, BA" />
+                            <img src="images/timon-lwo.jpg" alt="Timon Lwo,MEng" />
                         </div>
                         <div class="member-info">
-                            <h3>Vikram Daesety, BA</h3>
-                            <p class="member-title">MD Student Research Assistant</p>
-                            <p class="member-education">Boston University</p>
-                            <p class="member-research"><strong>Research Interests:</strong> Wnt signaling pathway activity in alveolar type 2 cells</p>
-                            <p class="member-contact">vdaesety at bu.edu</p>
+                            <h3>Timon Lwo, MEng</h3>
+                            <p class="member-title">Graduate student</p>
+                            <p class="member-education">University of Michigan</p>
+                            <p class="member-research"><strong>Research Interests:</strong> Alveolar macrophage biology in AATD</p>
+                            <p class="member-contact">timonlwo at bu.edu</p>
                         </div>
                     </div>
                 </div>
