--- a/team.html
+++ b/team.html
@@ -115,12 +115,12 @@
 
                     <div class="team-member">
                         <div class="member-photo">
-                            <!-- Replace with actual photo: images/marissa-gallagher.jpg -->
+                            <!-- Replace with actual photo: images/shubham-kesarwani.jpg -->
                             <img src="images/shubham-kesarwani.jpg" alt="Shubham Kesarwani, PhD" />
                         </div>
                         <div class="member-info">
                             <h3>Shubham Kesarwani, PhD</h3>
-                            <p class="member-title">Postdoc</p>
+                            <p class="member-title">Postdoctoral Fellow</p>
                             <p class="member-education">Institute for Stem Cell Science and Regenerative Medicine, India</p>
                             <p class="member-research"><strong>Research Interests:</strong> Genetic contributors to AATD liver disease outcomes</p>
                             <p class="member-contact">skesar at bu.edu</p>
@@ -129,15 +129,43 @@
 
                     <div class="team-member">
                         <div class="member-photo">
-                            <!-- Replace with actual photo: images/vikram-daesety.jpg -->
+                            <!-- Replace with actual photo: images/timon-lwo.jpg -->
                             <img src="images/timon-lwo.jpg" alt="Timon Lwo,MEng" />
                         </div>
                         <div class="member-info">
                             <h3>Timon Lwo, MEng</h3>
-                            <p class="member-title">Graduate student</p>
+                            <p class="member-title">PhD Student</p>
                             <p class="member-education">University of Michigan</p>
                             <p class="member-research"><strong>Research Interests:</strong> Alveolar macrophage biology in AATD</p>
                             <p class="member-contact">timonlwo at bu.edu</p>
+                        </div>
+                    </div>
+                    
+                    <div class="team-member">
+                        <div class="member-photo">
+                            <!-- Replace with actual photo: images/rose-griffin.jpg -->
+                            <img src="images/rose-griffin.jpg" alt="Rose Griffin" />
+                        </div>
+                        <div class="member-info">
+                            <h3>Rose Griffin, BA</h3>
+                            <p class="member-title">MD/PhD Student</p>
+                            <p class="member-education">Wesleyan University</p>
+                            <p class="member-research"><strong>Research Interests:</strong> Alveolar epithelial biology in AATD</p>
+                            <p class="member-contact">rosepg at bu.edu</p>
+                        </div>
+                    </div>
+                   
+                    <div class="team-member">
+                        <div class="member-photo">
+                            <!-- Replace with actual photo: images/hind-ghazallah.jpg -->
+                            <img src="images/hind-ghazallah.jpg" alt="Hind Ghazallah" />
+                        </div>
+                        <div class="member-info">
+                            <h3>Hind Ghazallah, MBChB</h3>
+                            <p class="member-title">Pulmonary and Critical Care Fellow</p>
+                            <p class="member-education">University of Baghdad College of Medicine</p>
+                            <p class="member-research"><strong>Research Interests:</strong> Patient and Clnician Attitudes Towards Genetic Therapies; Clinical Trials</p>
+                            <p class="member-contact">highazal at bu.edu</p>
                         </div>
                     </div>
                 </div>
