--- a/team.html
+++ b/team.html
@@ -168,6 +168,20 @@
                             <p class="member-contact">highazal at bu.edu</p>
                         </div>
                     </div>
+                   
+                    <div class="team-member">
+                        <div class="member-photo">
+                            <!-- Replace with actual photo: images/sacha sergent.jpg -->
+                            <img src="images/sacha-sergent.jpg" alt="Sacha Sergent" />
+                        </div>
+                        <div class="member-info">
+                            <h3>Sacha Sergent, BA</h3>
+                            <p class="member-title">Medical Student</p>
+                            <p class="member-education">Boston University</p>
+                            <p class="member-research"><strong>Research Interests:</strong>Guideline-Driven Screening for AATD Diagnosis</p>
+                            <p class="member-contact">sergent at bu.edu</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
