--- a/team.html
+++ b/team.html
@@ -158,10 +158,10 @@
                     <div class="team-member">
                         <div class="member-photo">
                             <!-- Replace with actual photo: images/hind-ghazallah.jpg -->
-                            <img src="images/hind-ghazallah.jpg" alt="Hind Ghazallah" />
+                            <img src="images/hind-ghazalah.jpg" alt="Hind Ghazalah" />
                         </div>
                         <div class="member-info">
-                            <h3>Hind Ghazallah, MBChB</h3>
+                            <h3>Hind Ghazalah, MBChB</h3>
                             <p class="member-title">Pulmonary and Critical Care Fellow</p>
                             <p class="member-education">University of Baghdad College of Medicine</p>
                             <p class="member-research"><strong>Research Interests:</strong> Patient and Clnician Attitudes Towards Genetic Therapies; Clinical Trials</p>
