--- a/research.html
+++ b/research.html
@@ -45,7 +45,7 @@
 
                 <div class="research-item">
                     <div class="research-visual">
-                        <!-- Replace with actual image: images/research-genetic.jpg -->
+                        <!-- Replace with actual image: images/Disease Mechanisms Research.jpg -->
                         <img src="images/placeholder-research.jpg" alt="Disease Mechanisms Research" />
                     </div>
                     <div class="research-content">
@@ -62,7 +62,7 @@ We apply this repository of cells, derived from patients with well-characterized
 
                 <div class="research-item">
                     <div class="research-visual">
-                        <!-- Replace with actual image: images/research-genetic.jpg -->
+                        <!-- Replace with actual image: images/Genetic Factors Research.jpg -->
                         <img src="images/placeholder-research.jpg" alt="Genetic Factors Research" />
                     </div>
                     <div class="research-content">
@@ -76,7 +76,7 @@ To identify genes and pathways that contribute to this heterogeneity, we are uti
 
                 <div class="research-item">
                     <div class="research-visual">
-                        <!-- Replace with actual image: images/research-copd.jpg -->
+                        <!-- Replace with actual image: images/COPD Susceptibility Research.jpg -->
                         <img src="images/placeholder-research.jpg" alt="COPD Susceptibility Research" />
                     </div>
                     <div class="research-content">
