--- a/research.html
+++ b/research.html
@@ -76,7 +76,7 @@ To identify genes and pathways that contribute to this heterogeneity, we are uti
 
                 <div class="research-item">
                     <div class="research-visual">
-                        <!-- Replace with actual image: images/COPD Susceptibility Research.jpg -->
+                        <!-- Replace with actual image: images/COPD_Susceptibility_Research.jpg -->
                         <img src="images/placeholder-research.jpg" alt="COPD Susceptibility Research" />
                     </div>
                     <div class="research-content">
