--- a/research.html
+++ b/research.html
@@ -45,8 +45,8 @@
 
                 <div class="research-item">
                     <div class="research-visual">
-                        <!-- Replace with actual image: images/Disease Mechanisms Research.jpg -->
-                        <img src="images/placeholder-research.jpg" alt="Disease Mechanisms Research" />
+                        <!-- Replace with actual image: images/Disease_Mechanisms_Research.jpg -->
+                        <img src="images/placeholder-research.jpg" alt="Disease_Mechanisms_Research.jpg" />
                     </div>
                     <div class="research-content">
                         <h2>Disease Mechanisms in AATD</h2>
