--- a/research.html
+++ b/research.html
@@ -77,7 +77,7 @@ To identify genes and pathways that contribute to this heterogeneity, we are uti
                 <div class="research-item">
                     <div class="research-visual">
                         <!-- Replace with actual image: images/COPD_Susceptibility_Research.jpg -->
-                        <img src="images/placeholder-research.jpg" alt="COPD Susceptibility Research" />
+                        <img src="images/placeholder-research.jpg" alt="COPD_Susceptibility_Research.jpg" />
                     </div>
                     <div class="research-content">
                         <h2>COPD Susceptibility Genes and Disease Pathogenesis</h2>
