--- a/research.html
+++ b/research.html
@@ -62,8 +62,8 @@ We apply this repository of cells, derived from patients with well-characterized
 
                 <div class="research-item">
                     <div class="research-visual">
-                        <!-- Replace with actual image: images/Genetic Factors Research.jpg -->
-                        <img src="images/placeholder-research.jpg" alt="Genetic Factors Research" />
+                        <!-- Replace with actual image: images/Genetic_Factors_Research.jpg -->
+                        <img src="images/placeholder-research.jpg" alt="Genetic_Factors_Research.jpg" />
                     </div>
                     <div class="research-content">
                         <h2>Genetic Factors That Drive Heterogenous Disease Outcomes</h2>
