--- a/publications.html
+++ b/publications.html
@@ -43,12 +43,12 @@
             <div class="container">
                 <ol class="publication-list">
                     <li class="publication-item">
-                        <span class="authors">Werder et al.</span>
-                        <a href="https://www.cell.com/ajhg/pdf/S0002-9297(23)00312-9.pdf" target="_blank" class="title">The COPD GWAS gene ADGRG6 instructs function and injury response in human iPSC-derived type II alveolar epithelial cells.</a>
-                        <span class="journal">The American Journal of Human Genetics.</span>
-                        <span class="year">2023</span>
-                        <span class="doi">doi:10.1016/j.ajhg.2023.08.017.</span>
-                        <span class="pmid">PMID: 37734371.</span>
+                        <span class="authors">Abo et al.</span>
+                        <a href="https://www.cell.com/ajhg/pdf/S0002-9297(23)00312-9.pdf" target="_blank" class="title">Pulmonary cellular toxicity in alpha-1 antitrypsin deficiency.</a>
+                        <span class="journal">Chest.</span>
+                        <span class="year">2024</span>
+                        <span class="doi">10.1016/j.chest.2024.02.013.</span>
+                        <span class="pmid">PMID: 38360172.</span>
                     </li>
 
                     <li class="publication-item">
