--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,7 @@
                 <ol class="publication-list">
                     <li class="publication-item">
                         <span class="authors">Abo et al.</span>
-                        <a href="https://www.cell.com/ajhg/pdf/S0002-9297(23)00312-9.pdf" target="_blank" class="title">Pulmonary cellular toxicity in alpha-1 antitrypsin deficiency.</a>
+                        <a href="https://https://journal.chestnet.org/article/S0012-3692(24)00159-4/fulltext" target="_blank" class="title">Pulmonary cellular toxicity in alpha-1 antitrypsin deficiency.</a>
                         <span class="journal">Chest.</span>
                         <span class="year">2024</span>
                         <span class="doi">10.1016/j.chest.2024.02.013.</span>
