--- a/publications.html
+++ b/publications.html
@@ -50,6 +50,15 @@
                         <span class="doi">10.1016/j.chest.2024.02.013.</span>
                         <span class="pmid">PMID: 38360172.</span>
                     </li>
+                    
+                    <li class="publication-item">
+                        <span class="authors">Werder et al.</span>
+                        <a href="https://www.cell.com/cell-reports/fulltext/S2211-1247(22)01658-8" target="_blank" class="title">The COPD GWAS gene ADGRG6 instructs function and injury response in human iPSC-derived type II alveolar epithelial cells.</a>
+                        <span class="journal">The American Journal of Human Genetics.</span>
+                        <span class="year">2023</span>
+                        <span class="doi">10.1016/j.ajhg.2023.08.017.</span>
+                        <span class="pmid">PMID: 37734371.</span>
+                    </li>
 
                     <li class="publication-item">
                         <span class="authors">Kaserman et al.</span>
