--- a/publications.html
+++ b/publications.html
@@ -65,7 +65,16 @@
                         <a href="https://www.cell.com/cell-reports/fulltext/S2211-1247(22)01658-8" target="_blank" class="title">Human iPSC-hepatocyte modeling of alpha-1 antitrypsin deficiency heterozygosity reveals metabolic dysregulation and cellular heterogeneity.</a>
                         <span class="journal">Cell Reports.</span>
                         <span class="year">2022;</span>
-                        <span class="volume">41, 111775.</span>
+                        <span class="doi">10.1016/j.celrep.2022.111775.</span>
+                        <span class="pmid">PMID: 36476855.</span>
+                    </li>
+                    
+                    <li class="publication-item">
+                        <span class="authors">Werder et al.</span>
+                        <a href="https://https://www.science.org/doi/10.1126/sciadv.abo6566" target="_blank" class="title">CRISPR interference interrogation of COPD GWAS genes reveals the functional significance of desmoplakin in iPSC-derived alveolar epithelial cells.</a>
+                        <span class="journal">Science Advances.</span>
+                        <span class="year">2022;</span>
+                        <span class="doi">10.1126/sciadv.abo6566.</span>
                         <span class="pmid">PMID: 36476855.</span>
                     </li>
 
@@ -74,7 +83,6 @@
                         <span class="title">Air-liquid interface culture promotes maturation and allows environmental exposure of pluripotent stem cell–derived alveolar epithelium.</span>
                         <span class="journal">JCI Insight.</span>
                         <span class="year">2022;</span>
-                        <span class="volume">7(6):e155589.</span>
                         <span class="pmid">PMID: 35315362.</span>
                         <a href="https://doi.org/10.1172/jci.insight.155589" target="_blank" class="pdf-link">View PDF</a>
                     </li>
