--- a/contact.html
+++ b/contact.html
@@ -64,8 +64,8 @@
                         <div class="contact-section">
                             <h3>Lab Manager</h3>
                             <p>
-                                <strong>Marissa Gallagher, M. Ed.</strong><br>
-                                Email: mgalla at bu.edu
+                                <strong>.</strong><br>
+                                Email: 
                             </p>
                         </div>
 
