--- a/team.html
+++ b/team.html
@@ -168,6 +168,20 @@
                             <p class="member-contact">highazal at bu.edu</p>
                         </div>
                     </div>
+                    
+                    <div class="team-member">
+                        <div class="member-photo">
+                            <!-- Replace with actual photo: images/maria-trovero.jpg -->
+                            <img src="images/maria-trovero.jpg" alt="Maria Trovero" />
+                        </div>
+                        <div class="member-info">
+                            <h3>Maria Trovero, PhD</h3>
+                            <p class="member-title">Staff Scientist</p>
+                            <p class="member-education">School of Sciences, University of the Republic, Uruguay</p>
+                            <p class="member-research"><strong>Research Interests:</strong> Gene editing</p>
+                            <p class="member-contact">mftrover at bu.edu</p>
+                        </div>
+                    </div>
                    
                     <div class="team-member">
                         <div class="member-photo">
