--- a/research.html
+++ b/research.html
@@ -59,7 +59,7 @@
                         <img src="images/COPD_Susceptibility_Research.jpg" alt="COPD Susceptibility Research" />
                     </div>
                     <div class="research-content">
-                        <h2>COPD Susceptibility Genes and Disease Pathogenesis</h2>
+                        <h2>Genetic Drivers of COPD/Emphysema</h2>
                         <p>We work to elucidate the mechanistic contribution of putative COPD susceptibility genes to lung disease pathogenesis. A limited understanding of COPD pathophysiology has hampered the efforts of researchers to develop new potential therapies. COPD develops only in a small percentage of long-term smokers, clusters in families, and exhibits variable prevalence in different racial populations, suggesting a significant contribution of genetic factors to disease susceptibility.</p>
                         
                         <p>In the past two decades, an increasing number of genes have been identified by GWAS studies as potential contributors to the disease process but their mechanistic contributions to disease remain unknown.</p>
