--- a/team.html
+++ b/team.html
@@ -196,6 +196,20 @@
                             <p class="member-contact">sergent at bu.edu</p>
                         </div>
                     </div>
+                    
+                    <div class="team-member">
+                        <div class="member-photo">
+                            <!-- Replace with actual photo: images/tingzhen-liu.jpg -->
+                            <img src="images/tingzhen-liu.jpg" alt="Tingzhen Liu" />
+                        </div>
+                        <div class="member-info">
+                            <h3>Tingzhen Liu, BS</h3>
+                            <p class="member-title">Masters Student</p>
+                            <p class="member-education">Brandeis University</p>
+                            <p class="member-research"><strong>Research Interests:</strong> Genetic Screens</p>
+                            <p class="member-contact">tliu3 at bu.edu</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
