--- a/research.html
+++ b/research.html
@@ -73,7 +73,7 @@
                         <img src="images/Genetic_Factors_Research.jpg" alt="Genetic Factors Research" />
                     </div>
                     <div class="research-content">
-                        <h2>Genetic Factors That Drive Heterogenous Disease Outcomes</h2>
+                        <h2>Genetic Factors That Underlie Heterogenous Disease Outcomes</h2>
                         <p>We aim to understand the genetic factors and mechanistic drivers that predispose subsets of AATD patients to develop clinical disease. It is well described that only approximately 15% of individuals homozygous for the single base pair "Z" mutation (homozygotes are referred to as "PiZZ") go on to develop clinically significant liver disease and that genetic cofactors likely contribute to disease susceptibility. Similarly, while PiZZ patients are highly predisposed to developing emphysema, significant heterogeneity exists in the degree of damage observed, with a subset of patients retaining normal lung function throughout their lives.</p>
                         
                         <p>To identify genes and pathways that contribute to this heterogeneity, we are utilizing CRISPR-based genetic screens in patient-derived cells. We analyze the results of these screens together with sequencing data from patient cohorts to determine potential drivers of specific clinical phenotypes.</p>
